rationalized image tags in docker CI

--- a/ci/buildkite/merge-queue-tests.yml
+++ b/ci/buildkite/merge-queue-tests.yml
@@ -113,6 +113,8 @@ steps:
 
   - label: ":node: Node.js Tests"
     command: ./ci/buildkite/node-unit-tests.sh
+    env:
+      TENSORZERO_COMMIT_TAG: ci-sha-${BUILDKITE_COMMIT:0:7}
     depends_on:
       - "build-gateway-container"
       - "build-node-unit-tests-container"
@@ -121,6 +123,8 @@ steps:
   - label: ":playwright: UI E2E Tests (without LLM credentials)"
     command: |
       bash ./ci/buildkite/ui-e2e-tests.sh
+    env:
+      TENSORZERO_COMMIT_TAG: ci-sha-${BUILDKITE_COMMIT:0:7}
     depends_on:
       - "build-gateway-container"
       - "build-mock-inference-provider-container"
@@ -139,6 +143,7 @@ steps:
           - "25.7-alpine"
     env:
       TENSORZERO_CLICKHOUSE_VERSION: "{{matrix.clickhouse_version}}"
+      TENSORZERO_COMMIT_TAG: ci-sha-${BUILDKITE_COMMIT:0:7}
     depends_on:
       - "build-gateway-e2e-container"
       - "build-clickhouse-tests-container"
@@ -147,6 +152,8 @@ steps:
 
   - label: "Live Tests"
     command: bash ./ci/buildkite/live-tests.sh
+    env:
+      TENSORZERO_COMMIT_TAG: ci-sha-${BUILDKITE_COMMIT:0:7}
     depends_on:
       - "build-gateway-e2e-container"
       - "build-mock-inference-provider-container"
