--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ node_modules/
 # Claude Code (see AGENTS.md)
 CLAUDE.md
 .claude/
+!.claude/agents
 
 ui/fixtures/s3-fixtures
 ci/provider-proxy-cache
