Disable dependabot for educational content

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -20,6 +20,11 @@ updates:
       interval: "weekly"
     labels: []
     open-pull-requests-limit: 0 # only send security updates
+    # These paths contain educational content that is not directly meant for production use.
+    # Automatic upgrades are likely to break them over time as they're not actively tested.
+    exclude-paths:
+      - "examples/**"
+      - "recipes/**"
 
   - package-ecosystem: "cargo"
     directory: "/"
