--- a/tensorzero-core/tests/e2e/docker-compose.replicated.yml
+++ b/tensorzero-core/tests/e2e/docker-compose.replicated.yml
@@ -119,7 +119,7 @@ services:
       dockerfile: gateway/Dockerfile
       target: gateway
     environment:
-      TENSORZERO_CLICKHOUSE_URL: http://chuser:chpassword@clickhouse-01:8123/tensorzero_e2e_tests
+      TENSORZERO_CLICKHOUSE_URL: http://chuser:chpassword@clickhouse-01:8123/${TENSORZERO_E2E_TESTS_DATABASE:-tensorzero_e2e_tests}
       TENSORZERO_CLICKHOUSE_CLUSTER_NAME: tensorzero_e2e_tests_cluster
     depends_on:
       clickhouse-01:
@@ -143,7 +143,8 @@ services:
       timeout: 1s
   fixtures:
     build:
-      dockerfile: ../../../ui/fixtures/Dockerfile
+      dockerfile: ui/fixtures/Dockerfile
+      context: ../../..
     volumes:
       - ../../../ui/fixtures:/fixtures
       - ~/.aws:/root/.aws
@@ -161,7 +162,7 @@ services:
       [
         "bash",
         "-c",
-        "cd /fixtures && ./load_fixtures.sh tensorzero_e2e_tests && sleep infinity",
+        "cd /fixtures && ./load_fixtures.sh ${TENSORZERO_E2E_TESTS_DATABASE:-tensorzero_e2e_tests} && sleep infinity",
       ]
     healthcheck:
       test: ["CMD", "test", "-f", "/load_complete.marker"]
