--- a/tensorzero-core/tests/e2e/docker-compose.yml
+++ b/tensorzero-core/tests/e2e/docker-compose.yml
@@ -73,7 +73,7 @@ services:
       dockerfile: gateway/Dockerfile
       target: gateway
     environment:
-      TENSORZERO_CLICKHOUSE_URL: http://chuser:chpassword@clickhouse:8123/tensorzero_e2e_tests
+      TENSORZERO_CLICKHOUSE_URL: http://chuser:chpassword@clickhouse:8123/${TENSORZERO_E2E_TESTS_DATABASE:-tensorzero_e2e_tests}
     depends_on:
       clickhouse:
         condition: service_healthy
@@ -114,7 +114,7 @@ services:
       [
         "bash",
         "-c",
-        "cd /fixtures && ./load_fixtures.sh tensorzero_e2e_tests && sleep infinity",
+        "cd /fixtures && ./load_fixtures.sh ${TENSORZERO_E2E_TESTS_DATABASE:-tensorzero_e2e_tests} && sleep infinity",
       ]
     healthcheck:
       test: ["CMD", "test", "-f", "/load_complete.marker"]
