--- a/tensorzero-core/tests/mock-inference-provider/Cargo.toml
+++ b/tensorzero-core/tests/mock-inference-provider/Cargo.toml
@@ -10,7 +10,7 @@ workspace = true
 
 [dependencies]
 async-stream = { workspace = true }
-axum = { workspace = true, features = ["multipart"] }
+axum = { workspace = true, features = ["multipart", "http2"] }
 clap = { workspace = true }
 futures = { workspace = true }
 mimalloc = "0.1.48"
