--- a/ui/fixtures/docker-compose.e2e.yml
+++ b/ui/fixtures/docker-compose.e2e.yml
@@ -7,6 +7,7 @@ services:
       CLICKHOUSE_PASSWORD: chpassword
     volumes:
       - ./config.xml:/etc/clickhouse-server/config.xml:ro
+      - clickhouse-data:/var/lib/clickhouse
     ports:
       - "8123:8123" # HTTP port
       - "9000:9000" # Native port
@@ -99,3 +100,6 @@ services:
       retries: 48 # Retry for up to 4 minutes
       start_interval: 1s
       start_period: 300s # Give the script time to start
+
+volumes:
+  clickhouse-data:
