--- a/tensorzero-core/tests/e2e/docker-compose.yml
+++ b/tensorzero-core/tests/e2e/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       # If the directory doesn't exist locally (i.e. we haven't defined a version-specific config),
       # an empty dir will get mounted in the container
       - ./clickhouse-configs/${TENSORZERO_CLICKHOUSE_VERSION:-24.12-alpine}/users.xml:/etc/clickhouse-server/users.d/users.xml
+      - clickhouse-data:/var/lib/clickhouse
     ports:
       - "8123:8123" # HTTP port
       - "9000:9000" # Native port
@@ -62,7 +63,7 @@ services:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:14269/health"]
       interval: 1s
       timeout: 3s
-      retries: 60    
+      retries: 60
     ports:
       - "16686:16686" # Browser UI
 
@@ -134,3 +135,6 @@ services:
       timeout: 1s
       retries: 48 # Retry for up to 4 minutes
       start_period: 5s # Give the script time to start
+
+volumes:
+  clickhouse-data:
