--- a/examples/readme/docker-compose.yml
+++ b/examples/readme/docker-compose.yml
@@ -18,7 +18,7 @@ services:
 
   gateway:
     image: tensorzero/gateway
-    command: --default-config  # no `tensorzero.toml` configuration file provided
+    command: --default-config # no `tensorzero.toml` configuration file provided
     environment:
       TENSORZERO_CLICKHOUSE_URL: http://chuser:chpassword@clickhouse:8123/tensorzero
       OPENAI_API_KEY: ${OPENAI_API_KEY:?Environment variable OPENAI_API_KEY must be set.}
@@ -45,6 +45,7 @@ services:
 
   ui:
     image: tensorzero/ui
+    command: --default-config
     environment:
       OPENAI_API_KEY: ${OPENAI_API_KEY:?Environment variable OPENAI_API_KEY must be set.}
       TENSORZERO_CLICKHOUSE_URL: http://chuser:chpassword@clickhouse:8123/tensorzero
