--- a/tensorzero-core/tests/e2e/docker-compose.live.yml
+++ b/tensorzero-core/tests/e2e/docker-compose.live.yml
@@ -1,3 +1,6 @@
+include:
+  - docker-compose-common.yml
+
 volumes:
   shared-tmpdir:
     driver: local
@@ -7,29 +10,6 @@ volumes:
       o: size=8G,uid=1000,gid=1000,mode=1777
 
 services:
-  clickhouse:
-    image: clickhouse/clickhouse-server:${TENSORZERO_CLICKHOUSE_VERSION:-24.12-alpine}
-    environment:
-      CLICKHOUSE_USER: chuser
-      CLICKHOUSE_DEFAULT_ACCESS_MANAGEMENT: 1
-      CLICKHOUSE_PASSWORD: chpassword
-    volumes:
-      # If the directory doesn't exist locally (i.e. we haven't defined a version-specific config),
-      # an empty dir will get mounted in the container
-      - ./clickhouse-configs/${TENSORZERO_CLICKHOUSE_VERSION:-24.12-alpine}/users.xml:/etc/clickhouse-server/users.d/users.xml
-    ports:
-      - "8123:8123" # HTTP port
-      - "9000:9000" # Native port
-    ulimits:
-      nofile:
-        soft: 262144
-        hard: 262144
-    healthcheck:
-      test: wget --spider --tries 1 http://chuser:chpassword@clickhouse:8123/ping
-      start_period: 30s
-      start_interval: 1s
-      timeout: 1s
-
   mock-inference-provider:
     image: tensorzero/mock-inference-provider:${TENSORZERO_COMMIT_TAG}
     build:
@@ -41,39 +21,6 @@ services:
       - "3030:3030"
     healthcheck:
       test: wget --spider --tries 1 http://localhost:3030/status
-      start_period: 30s
-      start_interval: 1s
-      timeout: 1s
-
-  minio:
-    image: bitnamilegacy/minio:2025.7.23
-    ports:
-      - "8000:9000" # API port
-      - "9001:9001" # Console port
-    environment:
-      MINIO_ROOT_USER: tensorzero-root
-      MINIO_ROOT_PASSWORD: tensorzero-root
-      MINIO_DEFAULT_BUCKETS: tensorzero-e2e-tests
-    healthcheck:
-      test: "mc ls local/tensorzero-e2e-tests || exit 1"
-      start_period: 30s
-      start_interval: 1s
-      timeout: 1s
-
-  jaeger:
-    image: jaegertracing/jaeger:2.5.0
-    volumes:
-      - ./jaeger-config.yaml:/jaeger/config.yaml
-    #command: --set=extensions.jaeger_storage.backends.some_store.memory.max_traces=1
-    command: --config /jaeger/config.yaml
-    ports:
-      - "16686:16686" # Browser UI
-      - "4317:4317"
-      - "4318:4318"
-      - "5778:5778"
-      - "9411:9411"
-    healthcheck:
-      test: ["CMD", "wget", "--spider", "--tries=1", "http://localhost:16686/"]
       start_period: 30s
       start_interval: 1s
       timeout: 1s
@@ -287,3 +234,7 @@ services:
         condition: service_healthy
       minio:
         condition: service_healthy
+      jaeger:
+        condition: service_healthy
+      otel-collector:
+        condition: service_started
