--- a/tensorzero-core/Cargo.toml
+++ b/tensorzero-core/Cargo.toml
@@ -132,6 +132,7 @@ tempfile = "3.21.0"
 ts-rs = { workspace = true }
 moka = { version = "0.12.10", features = ["sync"] }
 tonic = { version = "0.13.1", default-features = false }
+sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres"] }
 
 
 [dev-dependencies]
