--- a/tensorzero-core/Cargo.toml
+++ b/tensorzero-core/Cargo.toml
@@ -133,6 +133,7 @@ ts-rs = { workspace = true }
 moka = { version = "0.12.10", features = ["sync"] }
 tonic = { version = "0.13.1", default-features = false }
 pin-project = "1.1.10"
+once_cell = "1.21.3"
 
 
 [dev-dependencies]
