--- a/ui/package.json
+++ b/ui/package.json
@@ -10,8 +10,8 @@
     "typecheck": "react-router typegen && tsc",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,css,scss,html,json,yaml,md}\"",
     "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,css,scss,html,json,yaml,md}\" --ignore-path .prettierignore",
-    "lint": "eslint . --fix --max-warnings=0 --config eslint.config.js --cache",
-    "lint:check": "eslint . --max-warnings=0 --config eslint.config.js --cache",
+    "lint": "eslint . --fix --max-warnings=0 --config eslint.config.js --cache && tsc --noEmit",
+    "lint:check": "eslint . --max-warnings=0 --config eslint.config.js --cache && tsc --noEmit",
     "test": "vitest",
     "test-e2e-fast": "playwright test --grep-invert @slow",
     "test-e2e": "playwright test",
